--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.9.15-slim-buster
+FROM python:3.9.15-slim-bullseye
 
 WORKDIR /app
 
-COPY . .
+COPY DBDStats.py .
+COPY requirements.txt .
+COPY activity.json .
 
 RUN pip install -r requirements.txt
 
