fixed typo in Dockerfile

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -9,4 +9,4 @@ COPY activity.json .
 RUN python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-CMD ["python3", "DBDStats.py"]
+CMD ["python3", "main.py"]
