--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -1,11 +1,11 @@
-FROM python:3.9.15-slim-bullseye
+FROM python:3.9.16-slim-bullseye
 
 WORKDIR /app
 
-COPY DBDStats.py .
+COPY main.py .
 COPY requirements.txt .
 COPY activity.json .
 
 RUN pip install -r requirements.txt
 
-CMD ["python3", "DBDStats.py"]
+CMD ["python3", "main.py"]
