Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ preprocess:
   stage: preprocess
   script:
     - pip install autopep8
-    - autopep8 --in-place --aggressive --aggressive --max-line-length=120 --ignore=E402 -first 140 ./DBDStats/main.py
+    - autopep8 --in-place --aggressive --aggressive --max-line-length=120 --ignore=E402 --line-range 140+ ./DBDStats/main.py
 
 docker-build:
   image: docker:latest
