--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -6,6 +6,7 @@ COPY main.py .
 COPY requirements.txt .
 COPY activity.json .
 
+RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 CMD ["python3", "main.py"]
