--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ preprocess:
   stage: preprocess
   script:
     - pip install autopep8
-    - autopep8 --in-place --aggressive --max-line-length=120 --ignore=E402 --range 140 999999 ./DBDStats/main.py
+    - autopep8 --in-place --aggressive --max-line-length=120 --ignore=E402 --range 140 999999999 ./DBDStats/main.py
 
 docker-build:
   image: docker:latest
@@ -18,7 +18,6 @@ docker-build:
     - docker login -u $DOCKER_USER -p $DOCKER_PW
     - docker buildx create --use
     - sleep 2
-    - docker buildx build --compress --no-cache --platform linux/386,linux/amd64,linux/arm/v5,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x -t serpensin/dbdstats:latest --push ./DBDStats
+    - docker buildx build --compress --no-cache --platform linux/386,linux/amd64,linux/arm/v5,linux/arm/v7,linux/arm64/v8 -t serpensin/dbdstats:latest --push ./DBDStats
   dependencies:
     - preprocess
-
