--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ docker-build:
     - docker buildx create --use
     - sleep 2
     - docker buildx build --compress --no-cache --platform linux/386,linux/amd64,linux/arm/v5,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x -t serpensin/dbdstats:latest --push ./DBDStats
+  timeout: 90m
 
 send-request:
   image: appropriate/curl
