Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ send-request:
   script:
     - export CURRENT_TIME=$(date +%s)
     - sed "s/\$time/$CURRENT_TIME/g" $notify_payload > notify_payload_updated.json
-    - 'cat notify_payload_updated.json | curl -X POST -H "Content-Type: application/json" -d @- "$WEBHOOK_SUCCESS"'
+    - 'cat notify_payload_updated.json | curl --insecure -X POST -H "Content-Type: application/json" -d @- "$WEBHOOK_SUCCESS"'
 
 workflow:
   rules:
