--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ send-request:
     WEBHOOK_SUCCESS: $WEBHOOK
   script:
     - export CURRENT_TIME=$(date +%s)
-    - sed "s/\$time/$CURRENT_TIME/g" $notify_payload > $payload
-    - 'cat $payload | curl --insecure -X POST -H "Content-Type: application/json" -d @- "$WEBHOOK_SUCCESS"'
+    - PAYLOAD=$(sed "s/\$time/$CURRENT_TIME/g" $notify_payload)
+    - 'echo "$PAYLOAD" | curl --insecure -X POST -H "Content-Type: application/json" -d @- "$WEBHOOK_SUCCESS"'
 
 workflow:
   rules:
