Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ send-request:
   script:
     - export CURRENT_TIME=$(date +%s)
     - PAYLOAD=$(sed "s/\$time/$CURRENT_TIME/g" $notify_payload)
-    - 'echo "$PAYLOAD" | curl --insecure -X POST -H "Content-Type: application/json" -d "$PAYLOAD" "$WEBHOOK_SUCCESS"'
+    - 'echo "$PAYLOAD" | curl --insecure -X POST -H "Content-Type: application/json" -d @- "$WEBHOOK_SUCCESS"'
 
 workflow:
   rules:
