--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -6,7 +6,11 @@ COPY main.py .
 COPY requirements.txt .
 COPY activity.json .
 
-RUN python3 -m pip install --upgrade pip
+RUN apt-get update \
+    && apt-get install -y build-essential libssl-dev libffi-dev python3-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 CMD ["python3", "main.py"]
