• added my own wrapper for the twitchAPI • you can now get infos for the current twitch statistics

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9.16-slim-bullseye
 
 WORKDIR /app
 
-COPY main.py .
+COPY *.py .
 COPY requirements.txt .
 COPY activity.json .
 
@@ -11,6 +11,7 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 RUN python -m pip install --upgrade pip
+RUN pip install --upgrade setuptools
 RUN pip install -r requirements.txt
 
 CMD ["python3", "main.py"]
