--- a/DBDStats/docker-compose.yml
+++ b/DBDStats/docker-compose.yml
@@ -1,15 +1,17 @@
 services:
-  demo:
+  dbdstats:
     container_name: DBDStats
     deploy:
       replicas: 1
       restart_policy:
         condition: any
     environment:
-      OWNER_ID_: DISCORD_ID_OF_OWNER
       steamAPIkey: STEAM_APIKEY
       support_server: ID_OF_SUPPORTSERVER
       TOKEN: BOT_TOKEN
+      OWNER_ID: DISCORD_ID_OF_OWNER
+      twitch_client_id: twitch_client_id
+      twitch_client_secret: twitch_client_secret
     healthcheck:
       interval: 1m30s
       retries: 3
@@ -20,4 +22,8 @@ services:
       - http://localhost
       timeout: 10s
     image: serpensin/dbdstats
+    volumes:
+    - log:/app/DBDStats/Logs
 version: '3'
+volumes:
+    log: {}
