--- a/DBDStats/.env.template
+++ b/DBDStats/.env.template
@@ -1,8 +1,8 @@
 TOKEN=YOUR-DISCORD-BOT-TOKEN
 OWNER_ID=DISCORD-USERID-OF-OWNER
-steamAPIkey=YOUR-STEAM-APIKEY (https://steamcommunity.com/dev/apikey)
+steamAPIkey=YOUR-STEAM-APIKEY #(https://steamcommunity.com/dev/apikey)
 support_server=DISCORD-ID-SUPPORTSERVER
-twitch_client_id=TWITCH-CLIENT-ID
+twitch_client_id=TWITCH-CLIENT-ID #(https://dev.twitch.tv/console/apps/create)
 twitch_client_secret=TWITCH-CLIENT-SECRET
 libretransAPIkey=LIBRETRANS-APIKEY
 libretransURL=URL-OF-YOUR-LIBRETRANS 
