--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -11,13 +11,14 @@ dnspython==2.3.0
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
-packaging==23.0
+packaging==23.1
 pip==23.0.1
 prettytable==3.7.0
 pycountry==22.3.5
 pymongo==4.3.3
 python-dotenv==1.0.0
 requests==2.28.2
+sentry-sdk==1.19.1
 setuptools==67.6.1
 soupsieve==2.4
 urllib3==1.26.15
