changed docker detection update_cache now uses takss instead of threads

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -9,6 +9,7 @@ COPY activity.json .
 
 ENV TERM xterm
 ENV PYTHONUNBUFFERED 1
+ENV RUNNING_IN_DOCKER 'true'
 
 RUN python -m pip install --upgrade pip
 RUN pip install --upgrade setuptools
