sentry dsn now as env

--- a/DBDStats/.env.template
+++ b/DBDStats/.env.template
@@ -1,5 +1,6 @@
 TOKEN=YOUR-DISCORD-BOT-TOKEN
 OWNER_ID=DISCORD-USERID-OF-OWNER
+SENTRY_DSN=SENTRY_DSN_FOR_ERROR_REPORTING
 steamAPIkey=YOUR-STEAM-APIKEY #(https://steamcommunity.com/dev/apikey)
 support_server=DISCORD-ID-SUPPORTSERVER
 twitch_client_id=TWITCH-CLIENT-ID #(https://dev.twitch.tv/console/apps/create)
