--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -10,12 +10,14 @@ discord.py==2.2.3
 dnspython==2.3.0
 frozenlist==1.3.3
 idna==3.4
+jsonschema==4.17.3
 multidict==6.0.4
 packaging==23.1
 pip==23.1.2
 prettytable==3.7.0
 pycountry==22.3.5
 pymongo==4.3.3
+pyrsistent==0.19.3
 python-dotenv==1.0.0
 requests==2.31.0
 sentry-sdk==1.25.0
