--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.1.0
 discord.py==2.2.3
 dnspython==2.3.0
 frozenlist==1.3.3
+html2text==2020.1.16
 idna==3.4
 jsonschema==4.17.3
 multidict==6.0.4
@@ -20,7 +21,7 @@ pymongo==4.3.3
 pyrsistent==0.19.3
 python-dotenv==1.0.0
 requests==2.31.0
-sentry-sdk==1.25.0
+sentry-sdk==1.25.1
 setuptools==67.8.0
 soupsieve==2.4.1
 urllib3==1.26.15
