--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,13 @@ docker-build:
     - docker:dind
   script:
     - docker login -u serpensin -p $DOCKER_PW
-    - docker buildx create --use
+    - docker buildx create --use --name mybuilder
     - sleep 2
     - docker buildx build --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") --build-arg COMMIT=${CI_COMMIT_SHA} --compress --no-cache --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x -t serpensin/dbdstats:latest --push ./DBDStats
+  after_script:
+    - docker buildx rm mybuilder
+    - sleep 10
+    - docker volume prune -f
   timeout: 90m
 
 workflow:
