--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -22,8 +22,9 @@ pyrsistent==0.19.3
 python-dotenv==1.0.0
 requests==2.31.0
 sentry-sdk==1.25.1
-setuptools==67.8.0
+setuptools==68.0.0
 soupsieve==2.4.1
+topggpy==1.4.0
 urllib3==1.26.15
 wcwidth==0.2.6
 yarl==1.9.2
