--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -21,11 +21,11 @@ RUN if [ "$TARGETPLATFORM" = "linux/arm/v6" ] || [ "$TARGETPLATFORM" = "linux/ar
     fi
 RUN pip install -r requirements.txt
 
-LABEL maintainer="the_devil_of_the_rhine (863687441809801246)"
+LABEL maintainer="Discord: the_devil_of_the_rhine (863687441809801246)"
 LABEL commit=$COMMIT
 LABEL description="Discord bot for DBD for Steam stats."
 LABEL release=$BUILD_DATE
-LABEL VERSION="1.2.4"
+LABEL VERSION="1.2.5"
 LABEL url="https://gitlab.bloodygang.com/Serpensin/DBDStats"
 
 CMD ["python3", "main.py"]
