--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -14,7 +14,7 @@ ARG TARGETPLATFORM
 ARG BUILD_DATE
 ARG COMMIT
 
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev rust cargo && \
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev && \
     python -m pip install --upgrade pip && \
     pip install --upgrade setuptools && \
     pip install -r requirements.txt && \
