--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,6 +1,6 @@
-aiohttp==3.8.4
+aiohttp==3.8.5
 aiosignal==1.3.1
-asyncio==3.4.3
+anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -8,23 +8,28 @@ certifi==2023.5.7
 charset-normalizer==3.2.0
 discord.py==2.3.1
 dnspython==2.4.0
+exceptiongroup==1.1.2
 frozenlist==1.4.0
+h11==0.14.0
 html2text==2020.1.16
+httpcore==0.17.3
 idna==3.4
-jsonschema==4.18.3
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
 multidict==6.0.4
-packaging==23.1
 pip==23.2
 prettytable==3.8.0
 pycountry==22.3.5
 pymongo==4.4.1
-pyrsistent==0.19.3
 python-dotenv==1.0.0
+referencing==0.30.0
 requests==2.31.0
+rpds-py==0.9.2
 sentry-sdk==1.28.1
 setuptools==68.0.0
+sniffio==1.3.0
 soupsieve==2.4.1
 topggpy==1.4.0
-urllib3==1.26.15
+urllib3==2.0.4
 wcwidth==0.2.6
 yarl==1.9.2
