--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -14,10 +14,10 @@ ARG TARGETPLATFORM
 ARG BUILD_DATE
 ARG COMMIT
 
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev rust cargo && \
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev && \
     python -m pip install --upgrade pip && \
-    pip install --upgrade setuptools && \
-    pip install psutil && \
+    pip install --upgrade setuptools wheel && \
+    pip install psutil==5.9.5 && \
     pip install -r requirements.txt && \
     apk del .build-deps && \
     find /usr/local \
