--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -19,6 +19,7 @@ jsonschema-specifications==2023.7.1
 multidict==6.0.4
 pip==23.2.1
 prettytable==3.8.0
+psutil==5.9.5
 pycountry==22.3.5
 pymongo==4.4.1
 python-dotenv==1.0.0
