--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM python:3.9.17
+﻿FROM python:3.9.17-alpine
 
 WORKDIR /app
 
@@ -14,9 +14,11 @@ ARG TARGETPLATFORM
 ARG BUILD_DATE
 ARG COMMIT
 
-RUN python -m pip install --upgrade pip && \
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev libc-dev linux-headers && \
+    python -m pip install --upgrade pip && \
     pip install --upgrade setuptools wheel && \
     pip install -r requirements.txt && \
+    apk del .build-deps && \
     find /usr/local \
     \( -type d -a -name test -o -name tests \) \
     -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
