--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -37,6 +37,12 @@ services:
       - mongo
     networks:
       - dbd_net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 networks:
   dbd_net:
