--- a/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
+++ b/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
@@ -19,6 +19,12 @@ services:
     image: serpensin/dbdstats
     volumes:
     - dbdstats_log:/app/DBDStats
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
     dbdstats_log:
