--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -13,6 +13,8 @@ services:
 
   dbdstats:
     container_name: DBDStats
+    ports:
+      - "5000:5000"
     deploy:
       restart_policy:
         condition: any
