--- a/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
+++ b/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   dbdstats:
     container_name: DBDStats
+    ports:
+      - "5000:5000"
     deploy:
       restart_policy:
         condition: any
