--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -5,7 +5,7 @@ async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 certifi==2023.7.22
-charset-normalizer==3.3.0
+charset-normalizer==3.3.1
 discord.py==2.3.2
 dnspython==2.4.2
 exceptiongroup==1.1.3
@@ -14,22 +14,23 @@ h11==0.14.0
 html2text==2020.1.16
 httpcore==1.0.0
 idna==3.4
-jsonschema==4.19.1
+jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 multidict==6.0.4
-pip==23.3
+pip==23.3.1
 prettytable==3.9.0
 psutil==5.9.6
 pycountry==22.3.5
 pymongo==4.5.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
-sentry-sdk==1.32.0
+sentry-sdk==1.33.1
 setuptools==68.2.2
 sniffio==1.3.0
 soupsieve==2.5
 urllib3==2.0.7
-wcwidth==0.2.8
+wcwidth==0.2.9
 yarl==1.9.2
