--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -2,8 +2,8 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 anyio==4.2.0
 async-timeout==4.0.3
-attrs==23.1.0
-beautifulsoup4==4.12.2
+attrs==23.2.0
+beautifulsoup4==4.12.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
 discord.py==2.3.2
@@ -14,23 +14,24 @@ h11==0.14.0
 html2text==2020.1.16
 httpcore==1.0.2
 idna==3.6
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
+jsonschema==4.21.0
+jsonschema-specifications==2023.12.1
 multidict==6.0.4
-pip==23.3.1
+pip==23.3.2
 prettytable==3.9.0
-psutil==5.9.6
+psutil==5.9.7
 pycountry==23.12.11
 pymongo==4.6.1
 python-dotenv==1.0.0
 pytz==2023.3.post1
-referencing==0.32.0
+referencing==0.32.1
 requests==2.31.0
-rpds-py==0.13.2
-sentry-sdk==1.39.1
-setuptools==69.0.2
+rpds-py==0.17.1
+sentry-sdk==1.39.2
+setuptools==69.0.3
 sniffio==1.3.0
 soupsieve==2.5
+typing_extensions==4.9.0
 urllib3==2.1.0
-wcwidth==0.2.12
+wcwidth==0.2.13
 yarl==1.9.4
