--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,10 +1,10 @@
-aiohttp==3.9.1
+aiohttp==3.9.3
 aiosignal==1.3.1
 anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
-certifi==2023.11.17
+certifi==2024.2.2
 charset-normalizer==3.3.2
 discord.py==2.3.2
 dnspython==2.5.0
@@ -16,22 +16,22 @@ httpcore==1.0.2
 idna==3.6
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-multidict==6.0.4
-pip==23.3.2
+multidict==6.0.5
+pip==24.0
 prettytable==3.9.0
 psutil==5.9.8
 pycountry==23.12.11
 pymongo==4.6.1
 python-dotenv==1.0.1
-pytz==2023.3.post1
-referencing==0.32.1
+pytz==2024.1
+referencing==0.33.0
 requests==2.31.0
 rpds-py==0.17.1
-sentry-sdk==1.39.2
-setuptools==69.0.3
+sentry-sdk==1.40.4
+setuptools==69.1.0
 sniffio==1.3.0
 soupsieve==2.5
 typing_extensions==4.9.0
-urllib3==2.1.0
+urllib3==2.2.0
 wcwidth==0.2.13
 yarl==1.9.4
