The most important changes involve the update to the `.gitignore` file, where two files, `/DBDStats/playground.py` and `/DBDStats/googleauth.json`, have been added. This means that Git will no longer track these files or include them in any commits. This is a common practice for files that contain sensitive data or are not essential to the project's operation.
Changes:
1. Addition of `/DBDStats/playground.py` to the `.gitignore` file. This file is likely a personal test script and is not necessary for the project's functionality.
2. Addition of `/DBDStats/googleauth.json` to the `.gitignore` file. This file likely contains sensitive information, such as API keys or passwords, and should not be tracked or included in commits.

References to the code changes:
- `.gitignore` file: The changes to this file include the addition of `/DBDStats/playground.py` and `/DBDStats/googleauth.json`. These files are now ignored by Git.

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 *.bat
 /DBDStats/DBDStats/activity.json
 /DBDStats/DBDStats/DBDStats.db
+/DBDStats/playground.py
+/DBDStats/googleauth.json
