The most significant changes in the code revolve around improving the translation functionality, error handling, and data formatting. The translation functionality has been enhanced by using `googletrans.Translator` and `LibreTranslateAPI` for translation. Error handling has been improved by handling `FileNotFoundError` when loading and saving translations from/to a file. Data formatting has been improved in several ways, including the removal of a "thinking" animation and changes to the formatting of numbers. A new function `clean` has been added to delete the cache for selected items, specifically translations.
Changes:

1. The `libretrans.py` file has been updated to include error handling in the `detect`, `translate`, `get_settings`, and `validate_key` methods. The `translate` method now returns a string instead of a dictionary, and the `get_settings` method returns the JSON response from the API instead of a boolean value. The `validate_key` method now returns a boolean value.

2. The `DBDStats.pyproj` file has been updated to include `googletrans.py` and `playground.py` in the list of compiled files. A `googleauth.json` file has also been added to the list of content files.

3. The `Dockerfile` has been updated to copy only `main.py` and `__init__.py` into the Docker image, instead of all `.py` files.

4. The code now imports additional modules for concurrent processing and error handling. It also retrieves Google Cloud credentials from environment variables and checks their validity using the `check_credentials` method of the `googletrans.Translator`.

5. The `requirements.txt` file was updated to include new dependencies and update existing ones. Notably, the Google Cloud Translate API and related packages were added, and the versions of `httpcore` and `pymongo` were updated.

6. A new Python file, `googletrans.py`, was created. This file includes a `Translator` class that uses the Google Cloud Translate API to translate text. The `Translator` class has two 

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -3,7 +3,8 @@
 WORKDIR /app
 
 COPY CustomModules ./CustomModules
-COPY *.py .
+COPY main.py .
+COPY __init__.py .
 COPY requirements.txt .
 
 ENV TERM xterm
