--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -4,32 +4,43 @@ anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 discord.py==2.3.2
 dnspython==2.6.1
 exceptiongroup==1.2.0
 frozenlist==1.4.1
+google-api-core==2.18.0
+googleapis-common-protos==1.63.0
+google-auth==2.29.0
+google-cloud-core==2.4.1
+google-cloud-translate==3.15.3
+grpcio==1.62.1
+grpcio-status==1.62.1
 h11==0.14.0
 html2text==2024.2.26
-httpcore==1.0.4
+httpcore==1.0.5
 idna==3.6
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 multidict==6.0.5
-prettytable==3.10.0
+protobuf==4.25.3
+proto-plus==1.23.0
 psutil==5.9.8
+pyasn1_modules==0.4.0
+pyasn1==0.6.0
 pycountry==23.12.11
-pymongo==4.6.2
+pymongo==4.6.3
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.34.0
 requests==2.31.0
 rpds-py==0.18.0
-sentry-sdk==1.43.0
+rsa==4.9
+sentry-sdk==1.44.0
 sniffio==1.3.1
 soupsieve==2.5
 typing_extensions==4.10.0
 urllib3==2.2.1
-wcwidth==0.2.13
 yarl==1.9.4
