The most significant changes involve the introduction of a new environment variable `GOOGLE_APPLICATION_CREDENTIALS` in the `.env.template` file, which is used to specify the path to the Google Cloud credentials file. This change has been reflected in the `docker-compose.yml` and `docker-compose_without_MongoDB.yml` files, where the new environment variable and its corresponding volume mapping have been included. The `README.md` file has also been updated to reflect these changes, with the bot's features section now mentioning the use of Google Cloud Translation or LibreTranslate for translation, and the setup instructions providing guidance on how to configure the new environment variable.
List of changes:

1. The `.env.template` file was updated to include a new environment variable `GOOGLE_APPLICATION_CREDENTIALS` which is used to specify the path to the Google Cloud credentials file.

2. The `docker-compose.yml` file was updated to include the new environment variable `GOOGLE_APPLICATION_CREDENTIALS` and its corresponding volume mapping. The MongoDB related environment variables were also restructured for better readability.

3. The `docker-compose_without_MongoDB.yml` file was updated to include the new environment variable `GOOGLE_APPLICATION_CREDENTIALS` and its corresponding volume mapping.

4. The `README.md` file was updated in several places to reflect these changes. The bot's features section now mentions that it can use Google Cloud Translation or LibreTranslate for translation. The setup instructions were updated to include the new `GOOGLE_APPLICATION_CREDENTIALS` environment variable and to provide guidance on how to configure it. The instructions for running the bot with Docker were also updated to include the new environment variable and volume mapping.

--- a/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
+++ b/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
@@ -18,9 +18,11 @@ services:
       twitch_client_secret: twitch_client_secret
       libretransURL: URL_for_libretranslate
       libretransAPIkey: APIKey_for_libretranslate
+      GOOGLE_APPLICATION_CREDENTIALS: /app/googleauth.json  # DON'T CHANGE THIS LINE! #
     image: serpensin/dbdstats
     volumes:
     - dbdstats_log:/app/DBDStats
+    - /path/to/googleauth.json:/app/googleauth.json:ro
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 30s
