--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -28,12 +28,14 @@ services:
       twitch_client_secret: twitch_client_secret
       libretransURL: URL_for_libretranslate
       libretransAPIkey: APIKey_for_libretranslate
-      MongoDB_host: mongo           #####################################
-      MongoDB_port: 27017           #           Don't change!!!         #
-      MongoDB_database: DBDStats    #####################################
+      MongoDB_host: mongo                                   #####################################
+      MongoDB_port: 27017                                   #           Don't change!!!         #
+      MongoDB_database: DBDStats                            #                                   #
+      GOOGLE_APPLICATION_CREDENTIALS: /app/googleauth.json  #####################################
     image: serpensin/dbdstats
     volumes:
       - dbdstats:/app/DBDStats
+      - /path/to/googleauth.json:/app/googleauth.json:ro
     depends_on:
       - mongo
     networks:
