The most significant changes involve the modification of the `dbdstats` service in the `docker-compose.yml` and `docker-compose_without_MongoDB.yml` files. The `deploy` block and its nested `restart_policy` block have been removed, and a new `restart: always` directive has been added. This new directive ensures that the service will always restart if it stops.
List of Changes:

1. Removal of the `deploy` block and its nested `restart_policy` block from the `dbdstats` service in both `docker-compose.yml` and `docker-compose_without_MongoDB.yml` files. This change implies that the previous restart policy has been discarded.

2. Addition of a new `restart: always` directive to the `dbdstats` service in both `docker-compose.yml` and `docker-compose_without_MongoDB.yml` files. This new directive ensures that the service will always restart if it stops, providing a more reliable service operation.

References to the code changes:

- Removal of `deploy` block and `restart_policy` block: [docker-compose.yml](#), [docker-compose_without_MongoDB.yml](#)
- Addition of `restart: always` directive: [docker-compose.yml](#), [docker-compose_without_MongoDB.yml](#)

--- a/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
+++ b/DBDStats/Docker-Compose/docker-compose_without_MongoDB.yml
@@ -5,9 +5,7 @@ services:
     container_name: DBDStats
     ports:
       - "5000:5000"
-    deploy:
-      restart_policy:
-        condition: any
+    restart: always
     environment:
       SENTRY_DSN: SENTRY_DSN_FOR_ERROR_REPORTING
       steamAPIkey: STEAM_APIKEY
