The most significant changes in the code are aimed at improving error handling and efficiency. This includes better handling of exceptions when connecting to APIs like GoogleTranslate, LibreTranslate, Twitch API, and Steam API. The code for translating text has been updated to check the availability of GoogleTranslate or LibreTranslate before attempting to translate text. The code now also loads the languages supported by these translation services.
Additionally, the handling of specific cases has been improved, such as when a translation is not found in the cache, when a SteamID is not valid or not in use, when a profile is private, when the killswitch is not active, when the shrine data or Twitch API is not available, and when a player does not own DBD or the profile is private.

The code for handling file paths and file names has been updated for better consistency and readability. Minor syntax corrections have also been made for consistency, such as replacing single quotes with double quotes around strings. The code now also merges two language lists into one and removes duplicates.

Finally, a new line of code has been added to run a function that builds language lists for the bot to use.

Changes:

1. Updated `.gitignore` file to include certain directories.
2. Refactored `Translator` class in `googletrans.py`.
3. Updated `LibreTranslateAPI` class in `libretrans.py`.
4. Updated `API` class in `steam.py` to include docstrings and raise exceptions.
5. Updated `TwitchAPI` class in `twitch.py` to check access token validity.
6. Added a new Python interpreter in `DBDStats.pyproj`.
7. Improved error handling and efficiency in `main.py`.
8. Updated code for handling file paths and file names.
9. Improved handling of specific cases like unavailable translation or invalid SteamID.
10. Made minor syntax corrections for consistency.
11. Merged two language lists into one and removed duplicates.
12. Added a new line of code to run a function that builds language lists.

--- a/.gitignore
+++ b/.gitignore
@@ -364,6 +364,7 @@ FodyWeavers.xsd
 /DBDStats/DBDStats/Buffer
 /DBDStats/.env
 /DBDStats/env
+/DBDStats/env1
 *.bat
 /DBDStats/DBDStats/activity.json
 /DBDStats/DBDStats/DBDStats.db
