--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 *.bat
 /DBDStats/DBDStats/activity.json
 /DBDStats/DBDStats/DBDStats.db
+/DBDStats/googleauth.json
+/DBDStats/playground.py
