--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ FodyWeavers.xsd
 /DBDStats/DBDStats/DBDStats.db
 /DBDStats/googleauth.json
 /DBDStats/playground.py
+/DBDStats/translation_test.txt
