--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -26,6 +26,7 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
+pip==24.0
 protobuf==4.25.3
 proto-plus==1.23.0
 psutil==5.9.8
