--- a/.gitignore
+++ b/.gitignore
@@ -364,9 +364,10 @@ FodyWeavers.xsd
 /DBDStats/DBDStats/Buffer
 /DBDStats/.env
 /DBDStats/env
-*.bat
 /DBDStats/DBDStats/activity.json
 /DBDStats/DBDStats/DBDStats.db
 /DBDStats/googleauth.json
 /DBDStats/playground.py
 /DBDStats/translation_test.txt
+/debug_build.bat
+/release_build.bat
