The most significant changes in the code include the update of the application version from `1.11.5` to `1.13.0` in the `Dockerfile` and `main.py`. The handling of the `GOOGLE_APPLICATION_CREDENTIALS` environment variable has been modified in several files, including `.env.template`, `docker-compose.yml`, `docker-compose_without_MongoDB.yml`, and `main.py`. The `main.py` file has also seen several changes in the import statements, function names, and class methods.
Here are the changes in detail:

1. The `.env.template` file now includes a new environment variable `GOOGLE_APPLICATION_CREDENTIALS` to store the path to the Google credentials JSON file.
2. A new property `SuppressPackageInstallationPrompt` has been added to the `PropertyGroup` in `DBDStats.pyproj` to suppress package installation prompts.
3. The `GOOGLE_APPLICATION_CREDENTIALS` environment variable has been removed from the services in `docker-compose.yml` and `docker-compose_without_MongoDB.yml`. A new volume has been added to map the Google credentials JSON file from the host to the container.
4. The `Dockerfile` has been updated to change the application version from `1.11.5` to `1.13.0`.
5. In `main.py`, the `math` and `traceback` modules have been removed from the import statements and `tempfile` hase been added. The `uuid` module has also been removed from the import statements.
6. The `bot_version` variable in `main.py` has been updated from `1.11.5` to `1.13.0`.
7. The `GOOGLE_APPLICATION_CREDENTIALS` environment variable in `main.py` now has a default value of `./googleauth.json`.
8. The function for setting up folders in `main.py` has been refactored into a separate function `folder_setup()`.
9. The `check_api_rate_limit` function in `main.py` has been renamed to `check_rate_limit`.
10. The `Cache` class in `main.py` has been updated to handle rate limit errors more gracefully.
11. The `Functions` class in `main.py` has been updated to use the new `check_rate_limit` function.
12. The `SendInf

--- a/DBDStats/.env.template
+++ b/DBDStats/.env.template
@@ -12,3 +12,4 @@ MongoDB_port=MONGODB-PORT
 MongoDB_user=MONGODB-USERNAME
 MongoDB_password=MONGODB-PASSWORD
 MongoDB_database=MONGODB-DATABASE
+GOOGLE_APPLICATION_CREDENTIALS=PATH-TO-GOOGLE-CREDENTIALS-JSON
