--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.9.4
+aiohttp==3.9.5
 aiosignal==1.3.1
 anyio==4.3.0
 async-timeout==4.0.3
@@ -9,15 +9,15 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 discord.py==2.3.2
 dnspython==2.6.1
-exceptiongroup==1.2.0
+exceptiongroup==1.2.1
 frozenlist==1.4.1
 google-api-core==2.18.0
 googleapis-common-protos==1.63.0
 google-auth==2.29.0
 google-cloud-core==2.4.1
 google-cloud-translate==3.15.3
-grpcio==1.62.1
-grpcio-status==1.62.1
+grpcio==1.62.2
+grpcio-status==1.62.2
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
@@ -26,20 +26,21 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
+pip==24.0
 protobuf==4.25.3
 proto-plus==1.23.0
 psutil==5.9.8
 pyasn1_modules==0.4.0
 pyasn1==0.6.0
 pycountry==23.12.11
-pymongo==4.6.3
+pymongo==4.7.0
 python-dotenv==1.0.1
 pytz==2024.1
-referencing==0.34.0
+referencing==0.35.0
 requests==2.31.0
 rpds-py==0.18.0
 rsa==4.9
-sentry-sdk==1.45.0
+sentry-sdk==2.0.1
 sniffio==1.3.1
 soupsieve==2.5
 typing_extensions==4.11.0
