--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -16,8 +16,8 @@ googleapis-common-protos==1.63.0
 google-auth==2.29.0
 google-cloud-core==2.4.1
 google-cloud-translate==3.15.3
-grpcio==1.62.2
-grpcio-status==1.62.2
+grpcio==1.64.0
+grpcio-status==1.64.0
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
@@ -27,8 +27,8 @@ jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
 pip==24.0
-protobuf==4.25.3
-proto-plus==1.23.0
+protobuf==5.26.1
+proto-plus==1.24.0.dev0
 psutil==5.9.8
 pyasn1_modules==0.4.0
 pyasn1==0.6.0
@@ -37,10 +37,10 @@ pymongo==4.7.2
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.35.1
-requests==2.31.0
+requests==2.32.1
 rpds-py==0.18.1
 rsa==4.9
-sentry-sdk==2.1.1
+sentry-sdk==2.2.0
 sniffio==1.3.1
 soupsieve==2.5
 typing_extensions==4.11.0
