Updated logging system and bumped version to 1.14.0
This commit introduces a major overhaul of the logging system in the main.py file. The built-in `logging` module has been replaced with a custom logging system managed by the `log_handler.LogManager` class. This change affects how loggers are created and how messages are logged. The `print` function has been replaced with logging calls in several places, meaning these messages will now be logged to the log files instead of being printed to the console.

A new environment variable `LOG_LEVEL` has been introduced to set the log level for the new logging system. The `.env.template`, `docker-compose.yml`, `docker-compose_with_external_MongoDB.yml`, and `docker-compose_without_MongoDB.yml` files have been updated to include this new variable.

The bot version has been updated from "1.13.3" to "1.14.0" in the `Dockerfile`. The `requirements.txt` file has been updated to include the `colorama` library version `0.4.6` for colored console output.

A new Python file `log_handler.py` has been added to the `CustomModules` directory in the `DBDStats.pyproj` project. This file contains two classes: `LogManager` and `ColoredFormatter`, responsible for managing loggers and adding color to log messages respectively.

--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       twitch_client_secret: twitch_client_secret
       libretransURL: URL_for_libretranslate
       libretransAPIkey: APIKey_for_libretranslate
+      LOG_LEVEL: INFO
       MongoDB_host: mongo           #####################################
       MongoDB_port: 27017           #           Don't change!!!         #
       MongoDB_database: DBDStats    #####################################
