--- a/DBDStats/.env.template
+++ b/DBDStats/.env.template
@@ -13,3 +13,4 @@ MongoDB_user=MONGODB-USERNAME
 MongoDB_password=MONGODB-PASSWORD
 MongoDB_database=MONGODB-DATABASE
 GOOGLE_APPLICATION_CREDENTIALS=PATH-TO-GOOGLE-CREDENTIALS-JSON
+LOG_LEVEL=Info
