--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.12.3
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+colorama==0.4.6
 discord.py==2.3.2
 dnspython==2.6.1
 exceptiongroup==1.2.1
