--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -18,7 +18,7 @@ google-auth==2.29.0
 google-cloud-core==2.4.1
 google-cloud-translate==3.15.3
 grpcio==1.64.0
-grpcio-status==1.64.0
+grpcio-status
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
@@ -28,7 +28,7 @@ jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
 pip==24.0
-protobuf==5.26.1
+protobuf
 proto-plus==1.24.0.dev0
 psutil==5.9.8
 pyasn1_modules==0.4.0
