--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
-anyio==4.3.0
+anyio==4.4.0
 async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
@@ -18,7 +18,7 @@ google-auth==2.29.0
 google-cloud-core==2.4.1
 google-cloud-translate==3.15.3
 grpcio==1.64.0
-grpcio-status
+grpcio-status==1.64.0
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
@@ -28,23 +28,23 @@ jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
 pip==24.0
-protobuf
+protobuf==5.26.1
 proto-plus==1.24.0.dev0
 psutil==5.9.8
 pyasn1_modules==0.4.0
 pyasn1==0.6.0
-pycountry==23.12.11
+pycountry==24.6.1
 pymongo==4.7.2
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.35.1
-requests==2.32.1
+requests==2.32.3
 rpds-py==0.18.1
 rsa==4.9
-sentry-sdk==2.2.0
+sentry-sdk==2.3.1
 sniffio==1.3.1
 soupsieve==2.5
-typing_extensions==4.11.0
+typing_extensions==4.12.0
 urllib3==2.2.1
 wcwidth==0.2.13
 yarl==1.9.4
