--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -28,7 +28,7 @@ jsonschema-specifications==2023.12.1
 motor==3.4.0
 multidict==6.0.5
 pip==24.0
-protobuf==5.26.1
+protobuf
 proto-plus==1.24.0.dev0
 psutil==5.9.8
 pyasn1_modules==0.4.0
